--- a/src/CPSI.Site/CPSI.Site.csproj
+++ b/src/CPSI.Site/CPSI.Site.csproj
@@ -1,20 +1,34 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>ff561d96-07fb-438a-a0a5-6084c3c3dea3</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Areas\Coordenador\Controllers\" />
-    <Folder Include="Areas\Coordenador\Data\" />
-    <Folder Include="Areas\Coordenador\Models\" />
-    <Folder Include="Areas\Coordenador\Views\" />
-    <Folder Include="Controllers\" />
-    <Folder Include="Views\Shared\" />
+    <Folder Include="wwwroot\js\" />
+    <Folder Include="wwwroot\lib\" />
+    <Folder Include="wwwroot\css\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.7" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CPSI.Dados\CPSI.Dados.csproj" />
+    <ProjectReference Include="..\CPSI.Negocio\CPSI.Negocio.csproj" />
   </ItemGroup>
 
 </Project>
