--- a/src/CPSI.Site/appsettings.json
+++ b/src/CPSI.Site/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ConnPG": "Host=LocalHost;Database=CPSI;Port=5432;User Id=postgres;Password=123456"
+  }
 }
