--- a/src/CPSI.Dados/Educar.Dados.csproj
+++ b/src/CPSI.Dados/Educar.Dados.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CPSI.Negocio\CPSI.Negocio.csproj" />
+    <ProjectReference Include="..\CPSI.Negocio\Educar.Negocio.csproj" />
   </ItemGroup>
 
   <ItemGroup>
