--- a/src/Educar.Site/appsettings.json
+++ b/src/Educar.Site/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConnPG": "Host=LocalHost;Database=CPSI;Port=5432;User Id=postgres;Password=123456"
+    "ConnPG": "Host=LocalHost;Database=Educar;Port=5432;User Id=postgres;Password=123456"
   }
 }
