Mudança do arquivo cs project

--- a/src/Educar.Dados/Educar.Dados.csproj
+++ b/src/Educar.Dados/Educar.Dados.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20201026225513_RelacionamentoTurmaDisciplina.cs" />
+    <Compile Remove="Migrations\20201026225513_RelacionamentoTurmaDisciplina.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.7">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
