--- a/src/Educar.Site/appsettings.json
+++ b/src/Educar.Site/appsettings.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -9,5 +9,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ConnPG": "Host=LocalHost;Database=Educar;Port=5432;User Id=postgres;Password=123456"
+  },
+  "Informacoes": {
+    "Cliente": "CPSI",
+    "DescricaoCliente": "Centro de Promoção a Saúde do Idoso"
   }
 }
