--- a/src/Educar.Site/appsettings.json
+++ b/src/Educar.Site/appsettings.json
@@ -8,7 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConnPG": "Host=LocalHost;Database=Educar;Port=5432;User Id=postgres;Password=123456"
+    "ConnPG": "Host=LocalHost;Database=Educar;Port=5432;User Id=postgres;Password=123456",
+    "Conn": "Data Source=.\\SQLEXPRESS;Initial Catalog=Educar;Integrated Security=True"
   },
   "Informacoes": {
     "Cliente": "CPSI",
